[package]
name = "pogo-gamemaster-entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]
tokio = { version = "1.23.0", features = ["macros"] }
reqwest = { version = "0.11.13", features = ["json"] }
