[package]
name = "pogo-gamemaster-entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.24.1", features = ["fs", "macros"] }
reqwest = "0.11.13"
serde_json = "1.0.115"
serde_path_to_error = "0.1.16"
